<resources>
    <string name="o_que_e">O que é o League of Legends?</string>
    <string name="quem_criou">Quem criou o League of Legends?</string>
    <string name="o_mapa">Como funciona o mapa principal?</string>
    <string name="mapas_alternativos">Mapas alternativos</string>
    <string name="proxima_pagina">Próxima página</string>
    <string name="ir_para_quadrantes">Ir para a página dos quadrantes</string>
    <string name="texto_o_que_e">League of Legends é um jogo online competitivo que mistura a velocidade e a intensidade de um RTS com elementos de RPG. Duas equipes de poderosos campeões, cada um com design e estilo único, lutam em diversos campos de batalha e modos de jogo. Com um elenco de campeões em constante expansão, atualizações frequentes e uma cena competitiva exuberante, League of Legends oferece diversão incessante para jogadores de todos os níveis de habilidade.</string>
    <string name="lute_mano_a_mano">Lute mano a mano</string>
    <string name="lute_mano_a_mano_expli">Combine raciocínio estratégico, reflexos rápidos e coordenação da equipe para esmagar seus inimigos em confrontos menores e intensas batalhas 5v5</string>
    <string name="crie_estrategias_e_evolua">Crie estratégias e evolua</string>
    <string name="crie_estrategias_e_evolua_expli">Com atualizações frequentes, vários mapas e modos de jogo e novos campeões juntando-se à Liga o tempo todo, o único limite para o seu sucesso é a sua engenhosidade</string>
    <string name="competicao_do_seu_jeito">Competição do seu jeito</string>
    <string name="competicao_do_seu_jeito_expli">Seja se divertindo numa partida contra bots ou conquistando posições no sistema de ligas, League of Legends tem a tecnologia para parear você rapidamente com um grupo de competidores com o mesmo nível de habilidade</string>
    <string name="lute_com_honra">Lute com honra</string>
    <string name="lute_com_honra_expli">Lute com honra e receba comendas especiais de outros jogadores como recompensa pelo espírito esportivo</string>
    <string name="entre_no_mundo_dos_esports">Entre no mundo dos eSports</string>
    <string name="entre_no_mundo_dos_esports_expli">League of Legends tem a cena competitiva mais ativa do mundo e conta com diversos torneios, incluindo a prestigiosa Championship Series, em que jogadores profissionais competem por milhões</string>
    <string name="a_maior_comunidade">A maior comunidade de jogos online do mundo</string>
    <string name="a_maior_comunidade_expli">Junte-se à maior comunidade de jogos online: faça amigos, forme equipes e enfrente dezenas de milhões de oponentes de países do outro lado do mundo, depois troque experiências no reddit, no YouTube, nos fóruns e onde mais quiser</string>
    <string name="riot_games">Riot foi fundada em 2006 por gamers empreendedores convictos de que o desenvolvimento de jogos focado nos jogadores pode resultar em excelentes títulos. Em 2009 a Riot lançou seu jogo League of Legends, aclamado  pela crítica e público. Sendo o maior jogo online de PC do mundo, mais de 67 milhões o jogam todos os meses. Os jogadores que formam os alicerces de nossa comunidade e é para eles que continuamos a evoluir e aprimorar a experiência de League of Legends.</string>
    <string name="a_experiencia_primeiro_lugar">A EXPERIÊNCIA DO JOGADOR EM PRIMEIRO LUGAR</string>
    <string name="a_experiencia_primeiro_lugar_expli">Nossa obsessão gira em torno da experiência completa do jogador, desde a primeira partida de um novato até a milésima partida de um veterano, desde a instalação, gerenciamento de partidas até eSports televisionados. Tudo é importante. Nós ouvimos o que os jogadores nos dizem online e offline, através de palavras e comportamento. Nós analisamos profundamente. E nós agimos – sempre com o objetivo final de melhorar a experiência completa do jogador.</string>
    <string name="quebre_paradigmas">QUEBRE PARADIGMAS</string>
    <string name="quebre_paradigmas_expli">"Impossível" é o nosso tipo preferido de desafio. Nós cultivamos um desrespeito saudável pelas regras, por enxergar diferentemente as coisas e por arremessar pedras no status quo.</string>
    <string name="foco_no_talento">FOCO NO TALENTO E NA EQUIPE</string>
    <string name="foco_no_talento_expli">Nós atraímos, desenvolvemos e cultivamos equipes que  detonam. Funcionamos de maneira mais parecida com um time de esportes  a uma família. Como? Juntamos times com talento e os deixamos livres para exercer empreendedorismo, julgamento e predisposição para agir sobre o processo e a burocracia.</string>
    <string name="levamos_jogo_a_serio">LEVAMOS JOGO A SÉRIO</string>
    <string name="levamos_jogo_a_serio_expli">Não é nunca "apenas um jogo". Jogamos muitos jogos, especialmente o nosso. O dia de todos na Riot começa com uma partida. Tentamos fazer disto um hábito diário. Embora sejamos profissionais sérios, não levamos nós mesmos muito a sério. Seja com memes em apresentações, armas de espirrar água em reuniões, ou as LAN Houses construídas no centro de nossos novos escritórios, sempre há um momento para descontrairmos e nos divertirmos.</string>
    <string name="continue_faminto">CONTINUE FAMINTO, CONTINUE HUMILDE</string>
    <string name="continue_faminto_expli">Somos "humilciosos"; humildes, mas ambiciosos. A ambição cura o transtorno de não-inventado-aqui e outras patologias de complacência corporativa. Planos pequenos simplesmente não dispõem de magia. A ambição por si só torna-se indesejável rapidamente, então humildade também é necessária. Permanecemos abertos a opiniões e nunca nos esquecemos de nossas famílias, colegas de equipe, parceiros e (especialmente) dos jogadores que fazem tudo isso ser possível.</string>
    <string name="defender_e_destruir">Defender e destruir</string>
    <string name="defender_e_destruir_expli">O estandarte dourado do League of Legends competitivo. A ação em Summoner\'s Rift normalmente progride em fases únicas, começando com duelos de menor escala entre oponentes de rota antes de culminarem em confrontos de equipe grandes e épicos. Avance em direção à base inimiga, destrua o nexus do inimigo e conquiste a vitória!</string>
    <string name="a_batalha_pela_fenda">A batalha pela Fenda</string>
    <string name="a_batalha_pela_fenda_expli">Summoner\'s Rift, o maior mapa de League of Legends, é espelhado diagonalmente e dispõe de três rotas que vão em direção à base inimiga. Cada rota é defendida por três torres e um inibidor enquanto o nexus é protegido por um par de torres. Ambos os lados do mapa têm uma selva grande que proporciona efeitos poderosos. O rio central é o lar de dois monstros-chefe e do Aronguejo, que dá benefícios a ambas as equipes.</string>
    <string name="terreno_neutro">Terreno Neutro</string>
    <string name="o_dragao">O Dragão</string>
    <string name="o_dragao_expli">Localizado no rio, próximo à rota inferior, este monstro neutro costuma ser melhor enfrentado em grupo. Derrotar o Dragão concede um efeito permanente e cumulativo chamado "Matador de Dragões", com efeitos muito poderosos ao acumular cinco abates. O dragão também causa dano adicional e recebe menos dano de oponentes que tiverem mais acúmulos do efeito Matador de Dragões.</string>
    <string name="barao_nashor">Barão Nashor</string>
    <string name="barao_nashor_expli">Este monstro perigoso vive em seu esconderijo no rio, próximo à rota superior. Uma luta difícil até mesmo para cinco campeões bem equipados, o Barão Na\'Shor é a batalha neutra mais desafiante de League of Legends. Derrotar este monstro gigante concede o poderosíssimo efeito "Mão do Barão" a todos os campeões vivos.</string>
    <string name="a_selva">A selva</string>
    <string name="a_selva_expli">Demos a cada uma das áreas da selva um visual único para ajudar na sua orientação pelo mapa. Está vendo as madeiras mais avermelhadas? Você está na selva do norte. Vida rica e verdejante? Essa é a selva do sul. Rochas azuis? Essa é a selva do leste. Árvores envelhecidas e luzes roxas? Essa é a selva do oeste. Tela cinza? Olha, eu não sou nenhum especialista, mas acho que você morreu. Continue tentando.</string>
    <string name="twisted_treeline" translatable="false">Twisted Treeline</string>
    <string name="defender_e_destruir_expli_tt">Twisted Treeline, o segundo mapa clássico de League of Legends, costuma apresentar partidas mais rápidas e sangrentas, com ênfase em emboscadas e conflitos menores. Para sair vitorioso, você precisa abrir caminho até a base adversária e destruir o nexus inimigo.</string>
    <string name="a_batalha">A batalha pela Ilha das Sombras</string>
    <string name="a_batalha_expli">Um mapa menor que Summoner’s Rift, Twisted Treeline tem configuração horizontal, com duas rotas flanqueando uma área neutra. Duas torres estão posicionadas ao lado de cada rota, e o nexus é defendido por uma única torre. Cada equipe é composta de três campeões, e cada campeão surge no nível 3 com uma quantidade considerável de ouro. O tamanho reduzido do mapa e a curva de nível acelerada resultam em um jogo de menor duração e maior contagem de abates.</string>
    <string name="howling_abyss" translatable="false">Howling Abyss</string>
    <string name="defender_e_destruir_expli_ha">O que começou como um movimento da comunidade se desenvolveu rapidamente em um dos modos de jogo mais populares de League of Legends hoje em dia. Howling Abyss (ou Ponte das Batalhas Sangrentas como gostamos de chamar) coloca duas equipes de cinco campeões em combate por uma única rota sem território neutro. Os campeões começam a partida no nível 3 com uma quantia considerável de Ouro, colocando-os em ação imediatamente em batalhas grandes de equipes inteiras, abates instantâneos e escapadas por um triz.</string>
    <string name="a_batalha_pelo_abismo">A batalha pelo Abismo</string>
    <string name="a_batalha_pelo_abismo_expli">O único campo de batalha de uma rota disponível em League of Legends, Howling Abyss tem duas bases posicionadas em ambas as extremidades de uma ponte. Essa ponte é defendida por duas torres e um inibidor, embora o nexus seja protegido por um par de torres. Sem território neutro para lhe distrair da tarefa principal, Howling Abyss proporciona alguns dos confrontos em equipe mais frequentes e intensos de qualquer mapa.</string>
    <string name="segundo_quadrante">Segundo quadrante</string>
    <string name="segundo_quadrante_parte_1">Já essa, é a parte inferior esquerda do mapa, onde podemos encontrar o Azuporã</string>
    <string name="segundo_quadrante_parte_2">o Gromp</string>
    <string name="segundo_quadrante_parte_3">e os Trevoguaris</string>
    <string name="terceiro_quadrante">Terceiro quadrante</string>
    <string name="terceiro_quadrante_parte_1">O terceiro quadrante possui os monstros em suas mesmas localidades, porém espelhado. O monstro que já ficava ao centro, no caso o Rubrivira, continua ao centro</string>
    <string name="terceiro_quadrante_parte_2">O círculo vermelho representa onde ele está no primeiro quadrante, enquanto o círculo azul mostrar onde ele se localiza no terceiro quadrante</string>
    <string name="terceiro_quadrante_parte_3">O mesmo acontece com as Acuâminas, o círculo vermelho as representa no primero quadrante, enquanto que o azul, no terceiro quadrante</string>
    <string name="terceiro_quadrante_parte_4">E aqui vemos a localização dos Krugues</string>
    <string name="quarto_quadrante">Quarto Quadrante</string>
    <string name="quarto_quadrante_parte_1">Como ocorre nos primeiro e terceiro quadrantes, o segundo e quarto quadrantes também são espelhados</string>
    <string name="quarto_quadrante_parte_2">Aqui, mostramos as localizações do Azuporã, tanto no quarto quanto no segundo quadrante</string>
    <string name="quarto_quadrante_parte_3">Localização do Grompe nos dois quadrantes</string>
    <string name="quarto_quadrante_parte_4">E, por último, a localização dos Trevoguaris</string>
</resources>