<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".QuemCriou">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/cabecalho_subpaginas"
            android:text="@string/quem_criou"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/riot_games_logo_completo"/>

        <TextView
            style="@style/texto_explicativo_subpaginas"
            android:text="@string/riot_games"/>

        <TextView
            style="@style/subtitulo_subpaginas"
            android:text="@string/a_experiencia_primeiro_lugar"/>

        <TextView
            style="@style/texto_explicativo_subpaginas"
            android:text="@string/a_experiencia_primeiro_lugar_expli"/>

        <TextView
            style="@style/subtitulo_subpaginas"
            android:text="@string/quebre_paradigmas"/>

        <TextView
            style="@style/texto_explicativo_subpaginas"
            android:text="@string/quebre_paradigmas_expli"/>

        <TextView
            style="@style/subtitulo_subpaginas"
            android:text="@string/foco_no_talento"/>

        <TextView
            style="@style/texto_explicativo_subpaginas"
            android:text="@string/foco_no_talento_expli"/>

        <TextView
            style="@style/subtitulo_subpaginas"
            android:text="@string/levamos_jogo_a_serio"/>

        <TextView
            style="@style/texto_explicativo_subpaginas"
            android:text="@string/levamos_jogo_a_serio_expli"/>

        <TextView
            style="@style/subtitulo_subpaginas"
            android:text="@string/continue_faminto"/>

        <TextView
            style="@style/texto_explicativo_subpaginas"
            android:text="@string/continue_faminto_expli"/>
    </LinearLayout>

</ScrollView>
