<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".ComoFuncionaOMapa">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/cabecalho_subpaginas"
            android:text="@string/o_mapa"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:src="@drawable/mapa_principal_red_side"/>

        <TextView
            style="@style/subtitulo_subpaginas"
            android:text="@string/defender_e_destruir"/>

        <TextView
            style="@style/texto_explicativo_subpaginas"
            android:text="@string/defender_e_destruir_expli"/>

        <TextView
            style="@style/subtitulo_subpaginas"
            android:text="@string/a_batalha_pela_fenda"/>

        <TextView
            style="@style/texto_explicativo_subpaginas"
            android:text="@string/a_batalha_pela_fenda_expli"/>

        <TextView
            style="@style/subtitulo_subpaginas"
            android:text="@string/terreno_neutro"/>

        <TextView
            style="@style/subsubtitulo_subpaginas"
            android:text="@string/a_selva"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/a_selva"/>

        <TextView
            style="@style/texto_explicativo_subpaginas"
            android:text="@string/a_selva_expli"/>

        <TextView
            style="@style/subsubtitulo_subpaginas"
            android:text="@string/o_dragao"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/o_dragao"/>

        <TextView
            style="@style/texto_explicativo_subpaginas"
            android:text="@string/o_dragao_expli"/>

        <TextView
            style="@style/subsubtitulo_subpaginas"
            android:text="@string/barao_nashor"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/barao_nashor"/>

        <TextView
            style="@style/texto_explicativo_subpaginas"
            android:text="@string/barao_nashor_expli"/>
    </LinearLayout>

</ScrollView>
