<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="br.edu.ifal.joaogabriel.howtoleagueoflegends.MapasAlternativos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/cabecalho_subpaginas"
            android:text="@string/mapas_alternativos"/>

        <TextView
            style="@style/subtitulo_subpaginas"
            android:text="@string/twisted_treeline"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            android:src="@drawable/twisted_treeline"/>

        <TextView
            style="@style/subsubtitulo_subpaginas"
            android:text="@string/defender_e_destruir"/>

        <TextView
            style="@style/texto_explicativo_subpaginas"
            android:text="@string/defender_e_destruir_expli_tt"/>

        <TextView
            style="@style/subsubtitulo_subpaginas"
            android:text="@string/a_batalha"/>

        <TextView
            style="@style/texto_explicativo_subpaginas"
            android:text="@string/a_batalha_expli"/>

        <TextView
            style="@style/subtitulo_subpaginas"
            android:text="@string/howling_abyss"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            android:src="@drawable/howling_abyss"/>

        <TextView
            style="@style/subsubtitulo_subpaginas"
            android:text="@string/defender_e_destruir"/>

        <TextView
            style="@style/texto_explicativo_subpaginas"
            android:text="@string/defender_e_destruir_expli_ha"/>

        <TextView
            style="@style/subsubtitulo_subpaginas"
            android:text="@string/a_batalha_pelo_abismo"/>

        <TextView
            style="@style/texto_explicativo_subpaginas"
            android:text="@string/a_batalha_pelo_abismo_expli"/>
    </LinearLayout>

</ScrollView>
