<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="br.edu.ifal.joaogabriel.howtoleagueoflegends.SegundoQuadrante">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/cabecalho_subpaginas"
            android:text="@string/segundo_quadrante"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:src="@drawable/segundo_quadrante"/>

        <TextView
            style="@style/texto_explicativo_subpaginas"
            android:text="@string/segundo_quadrante_parte_1"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:src="@drawable/azupora"/>

        <TextView
            style="@style/texto_explicativo_subpaginas"
            android:text="@string/segundo_quadrante_parte_2"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:src="@drawable/grompe"/>

        <TextView
            style="@style/texto_explicativo_subpaginas"
            android:text="@string/segundo_quadrante_parte_3"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:src="@drawable/trevoguaris"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="chamarTerceiroQuadrante"
            android:text="@string/proxima_pagina"/>
    </LinearLayout>

</ScrollView>
