<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="br.edu.ifal.joaogabriel.howtoleagueoflegends.QuartoQuadrante">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/cabecalho_subpaginas"
            android:text="@string/quarto_quadrante"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:src="@drawable/quarto_quadrante"/>

        <TextView
            style="@style/texto_explicativo_subpaginas"
            android:text="@string/quarto_quadrante_parte_1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="230dp"
                android:layout_height="230dp"
                android:src="@drawable/azupora_localizacao"/>

            <TextView
                style="@style/texto_explicativo_subpaginas"
                android:layout_height="match_parent"
                android:text="@string/quarto_quadrante_parte_2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="230dp"
                android:layout_height="230dp"
                android:src="@drawable/grompe_localizacao"/>

            <TextView
                style="@style/texto_explicativo_subpaginas"
                android:layout_height="match_parent"
                android:text="@string/quarto_quadrante_parte_3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="230dp"
                android:layout_height="230dp"
                android:src="@drawable/trevoguaris_localizacao"/>

            <TextView
                style="@style/texto_explicativo_subpaginas"
                android:layout_height="match_parent"
                android:text="@string/quarto_quadrante_parte_4"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="chamarPaginaQuadrantes"
            android:text="@string/ir_para_quadrantes"/>
    </LinearLayout>

</ScrollView>
